--- a/assignments/js/SPA/POS system Using Bootstrap/index.html
+++ b/assignments/js/SPA/POS system Using Bootstrap/index.html
@@ -6,8 +6,8 @@
     <meta content="width=device-width, initial-scale=1" name="viewport">
     <link href="assets/css/Style.css" rel="stylesheet">
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
-    <link href="assets/Fontawesome/all.min.css" rel="stylesheet">
     <link href="assets/css/normalize.css" rel="stylesheet">
+    <link href="assets/Fontawesome/all.min.css" rel="stylesheet">
 
     <style>
         body {
@@ -54,39 +54,30 @@
 <main class="container-fluid" id="dashboardContent">
     <div class="container-fluid">
         <section class="row mt-5 ">
-            <div class="dash-col col-sm-6 col-xl-3  ">
-                <div class="dash-2col border rounded-3 d-flex align-items-center justify-content-evenly p-4">
-                    <i class="fa-solid fa-chart-line fa-3x text-primary"></i>
-                    <div>
-                        <h4>Today Sales</h4>
-                        <h6 class="mb-0">$1234</h6>
-                    </div>
-                </div>
-            </div>
-            <div class="dash-col col-sm-6 col-xl-3">
+            <div class="dash-col col-sm-6 col-md-4 col-xl-4">
                 <div class="dash-2col border rounded-3 d-flex align-items-center justify-content-evenly p-4">
                     <i class="fa-solid  fa-dollar-sign fa-3x text-primary"></i>
                     <div>
                         <h4>Total Sales</h4>
-                        <h6 class="mb-0">$1234</h6>
+                        <h6 class="mb-0" id="totalSalePrice">0 Rs/=</h6>
                     </div>
                 </div>
             </div>
-            <div class="dash-col col-sm-6 col-xl-3">
+            <div class="dash-col col-sm-6 col-md-4 col-xl-4">
                 <div class="dash-2col border rounded-3 d-flex align-items-center justify-content-evenly p-4">
                     <i class="fa-solid fa-cart-shopping fa-3x text-primary"></i>
                     <div>
                         <h4>Items</h4>
-                        <h6 class="mb-0">34</h6>
+                        <h6 class="mb-0" id="itemCount">0</h6>
                     </div>
                 </div>
             </div>
-            <div class="dash-col  pe-0  col-sm-6 col-xl-3">
+            <div class="dash-col  pe-0 col-sm-6 col-md-4 col-xl-4">
                 <div class="dash-2col border rounded-3 d-flex align-items-center justify-content-evenly p-4">
                     <i class="fa-solid fa-users fa-3x text-primary"></i>
                     <div>
                         <h4>Customers</h4>
-                        <h6 class="mb-0">234</h6>
+                        <h6 class="mb-0" id="customerCount">0</h6>
                     </div>
                 </div>
             </div>
@@ -104,7 +95,7 @@
                         <th scope="col">Payment Total</th>
                     </tr>
                     </thead>
-                    <tbody>
+                    <tbody id="recentSaleTbl">
 
                     </tbody>
                 </table>
@@ -215,8 +206,7 @@
                         <label class="form-label" for="DeleteCustomerFormFile">Customer ID</label>
                         <div class="d-flex">
                             <input class="form-control me-1" id="DeleteCustomerFormFile" type="text">
-                            <button class="btn btn-outline-success" id="customerSearchBtn"><i
-                                    class="fa-solid fa-magnifying-glass"></i>
+                            <button class="btn btn-outline-success" id="customerSearchBtn"><i class="fa-solid fa-magnifying-glass"></i>
                             </button>
                         </div>
                         <span class="control-error"></span>
