--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <link rel="icon" type="image/x-icon" href="assets/portfolio/kt.png">
     <link href="assets/css/normalize.css" rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/fonts/css/all.css">
+    <link rel="stylesheet" href="assets/css/fonts/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@300&family=Oswald:wght@200&display=swap"
