POS - Customer ID Auto Generate

--- a/assignments/js/SPA/POS system Using Bootstrap/index.html
+++ b/assignments/js/SPA/POS system Using Bootstrap/index.html
@@ -166,7 +166,7 @@
                 <section>
                     <div class="mb-3">
                         <label class="form-label" for="AddCustomerFormFile">Customer ID</label>
-                        <input class="form-control" id="AddCustomerFormFile" type="text">
+                        <input class="form-control" id="AddCustomerFormFile" type="text" disabled>
                         <span class="control-error"></span>
                     </div>
                     <div class="mb-3">
