--- a/project.html
+++ b/project.html
@@ -8,7 +8,7 @@
 
     <link rel="icon" type="image/x-icon" href="assets/portfolio/kt.png">
     <link href="assets/css/normalize.css" rel="stylesheet">
-    <link href="assets/css/fonts/css/all.css" rel="stylesheet">
+    <link href="assets/css/fonts/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com" rel="preconnect">
     <link crossorigin href="https://fonts.gstatic.com" rel="preconnect">
     <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@300&family=Oswald:wght@200&display=swap"
@@ -170,6 +170,8 @@
     </style>
 </head>
 <body>
+
+
 <main>
     <section>
         <div>
