POS - Item ID Auto Generate

--- a/assignments/js/SPA/POS system Using Bootstrap/index.html
+++ b/assignments/js/SPA/POS system Using Bootstrap/index.html
@@ -298,7 +298,7 @@
                 <section>
                     <div class="mb-3">
                         <label class="form-label" for="AddItemFormFile">Item Code</label>
-                        <input class="form-control" id="AddItemFormFile" type="text">
+                        <input class="form-control" id="AddItemFormFile" type="text" disabled>
                         <span class="control-error"></span>
                     </div>
                     <div class="mb-3">
