--- a/assignments/js/SPA/POS system Using Bootstrap/index.html
+++ b/assignments/js/SPA/POS system Using Bootstrap/index.html
@@ -520,6 +520,65 @@
         </div>
     </section>
 </main>
+<div class="modal" tabindex="-1" id="PurchaseModal">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title text-success">Purchase Successful</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <div class="row">
+                    <div class="col-6">
+                        <h1 style="font-size: 11px">Invoice ID</h1>
+                        <span id="InvoiceIdModal" style="font-size: 22px;">OD-001</span>
+                    </div>
+                    <div class="col-6">
+                        <h1 style="font-size: 11px">Discount</h1>
+                        <span id="discountModal" style="font-size: 22px">10%</span>
+                    </div>
+                    <div class="col-12">
+                        <hr>
+                    </div>
+                    <div class="col-12">
+                        <div class="row">
+                            <div class="col-6">
+                                <h1 style="font-size: 15px">Cash</h1>
+                            </div>
+                            <div class="col-6">
+                                <span id="cashModal" style="font-size: 19px">10000 Rs/=</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12">
+                        <div class="row">
+                            <div class="col-6">
+                                <h1 style="font-size: 15px">Sub Total</h1>
+                            </div>
+                            <div class="col-6">
+                                <span id="subTotalModal" style="font-size: 19px">10000 Rs/=</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12">
+                        <hr>
+                    </div>
+                    <div class="col-12">
+                        <div class="row">
+                            <div class="col-6">
+                                <h1 style="font-size: 15px">Balance</h1>
+                            </div>
+                            <div class="col-6">
+                                <span id="balanceModal" style="font-size: 19px">10000 Rs/=</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
 
 
 <script src="assets/js/bootstrap.min.js"></script>
