--- a/assignments/js/Game/2D Game/src/Levels/level_01.html
+++ b/assignments/js/Game/2D Game/src/Levels/level_01.html
@@ -3,17 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="../lvl01_Styles.css">
+    <link rel="stylesheet" href="css/lvl01_Styles.css">
     <link rel="stylesheet" href="../assets/normalize.css">
 </head>
 <body class="body">
 <main>
-    <div class="background">
-        <div class="soil"></div>
-        <div class="bush1"></div>
-        <div class="bush2"></div>
-        <div class="bush3"></div>
+    <div class="background"></div>
+    <div class="soil"></div>
+    <div id="enemyContainer">
+        <div>
+            <div id="enemy"></div>
+        </div>
     </div>
+    <div class="bush1"></div>
+    <div class="bush2"></div>
+    <div class="bush3"></div>
 
     <div id="cursor"></div>
     <div class="score_enemyContainer">
@@ -21,9 +25,9 @@
             <h1>Score : </h1>
             <h1 id="score"> 00</h1>
         </div>
-        <div id="enemyRemainCount">
+        <div id="enemyRemainCountContainer">
             <h1>Enemies Left : </h1>
-            <h1>00</h1>
+            <h1 id="enemyRemainCount">10</h1>
         </div>
     </div>
 </main>
@@ -34,50 +38,62 @@
 <script src="../assets/js/jquery-3.6.1.min.js"></script>
 <script>
     //mouse tracking
-
     $(window).on('mousemove', function (event) {
         $("#cursor").css({'top':event.pageY, 'left':event.pageX});
+        console.log('y '+event.pageY +' x '+event.pageX);
     });
 
+    var enemyDIV = document.getElementById('enemy');
+    enemyImage = new Image();
+    enemyImage.src="assets/Level 1/Heart.png";
 
-    //enemy span
-    canvas = document.getElementById('mycanvas');
-    gameover = false;
-
-    // pen is an object created using the getContext() function.
-    pen = canvas.getContext('2d'); // 2d is passed to make 2d games in html
-
-    function enemy(x,y,speed){
-        this.x = x;
-        this.y = y;
-        this.w = 50;
-        this.h = 50;
-        this.state = "active"
-        this.speed = speed;
-
-        this.draw = function(enemyImage){
-
-            pen.drawImage(enemyImage,this.x,this.y,this.w,this.h);
-
+    class Enemy{
+        constructor(x,y) {
+            this.x = x;
+            this.y = y;
+            this.w = 40;
+            this.h = 40;
         }
 
-        this.update = function(){
-
-            this.x = this.x + this.speed;
-
-            // To test the boundary conditions
-            if(this.x >= W-this.w || this.x<=0){
-                this.speed *= -1;
-            }
-
-            this.y++;
-
-            if(this.y<=0){
-                this.state = "inactive"
-            }
+        draw(){
+            enemyDIV.appendChild(enemyImage);
+            enemyDIV.style.position = "absolute";
+            enemyDIV.style.left = this.x+'px';
+            enemyDIV.style.top = this.y+'px';
         }
 
+        remove(xDirec,yDirec){
+
+        }
     }
+
+    let enemiesLeft = $('#enemyRemainCount').text();
+    const xDirection = [40,400,795,1120];
+    let lastRandom=-1;
+    let random, enemyS;
+
+    function spawnEnemies(){
+        if (enemiesLeft>0){
+            random = Math.floor(Math.random() * xDirection.length);
+            while (lastRandom==random){
+                random = Math.floor(Math.random() * xDirection.length);
+            }
+            console.log("xDirection[random] "+xDirection[random]+" "+75);
+            enemyS = new Enemy(xDirection[random],0);
+            enemyS.draw();
+
+            // setTimeout(()=>{
+            //     enemy.remove(xDirection[random],75);
+            // },1000)
+
+            lastRandom=random;
+            enemiesLeft=enemiesLeft-1;
+            $('#enemyRemainCount').text(enemiesLeft);
+        }else {
+            //game over seen
+        }
+    }
+    spawnEnemies();
 </script>
 </body>
 </html>
