--- a/assignments/js/Game/2D Game/src/Levels/level_01.html
+++ b/assignments/js/Game/2D Game/src/Levels/level_01.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
-    <link rel="stylesheet" href="css/lvl01_Styles.css">
-    <link rel="stylesheet" href="../assets/normalize.css">
+    <title>Hunter</title>
+    <link rel="stylesheet" href="../assets/css/lvl01_Styles.css">
+    <link rel="stylesheet" href="../assets/css/normalize.css">
+
 </head>
 <body class="body">
 <main>
@@ -33,69 +34,6 @@
 </main>
 
 <script src="../assets/js/jquery-3.6.1.min.js"></script>
-<script>
-    //mouse tracking
-    $(window).on('mousemove', function (event) {
-        $("#cursor").css({'top':event.pageY, 'left':event.pageX});
-    });
-
-    var enemyDIV = document.getElementById('enemy');
-    let enemiesLeft = $('#enemyRemainCount').text();
-    const xDirection = [70,250,400,525,795];
-    let lastRandom =-1;
-    let lastRandomEnemy =-1;
-    let random, enemyS , randomEnemy;
-
-    class Enemy{
-        constructor(x,y) {
-            this.x = x;
-            this.y = y;
-        }
-
-        draw(){
-            enemyDIV.appendChild(monsters[randomEnemy]);
-            enemyDIV.style.position = "absolute";
-            enemyDIV.style.left = this.x+'px';
-            enemyDIV.style.top = this.y+'px';
-        }
-
-    }
-
-    function spawnEnemies(){
-        if (enemiesLeft>0){
-            console.log("lastRandomEnemy "+lastRandomEnemy);
-            random = Math.floor(Math.random() * xDirection.length);
-            randomEnemy = Math.floor(Math.random() * monsters.length);
-
-            while (lastRandom==random){
-                random = Math.floor(Math.random() * xDirection.length);
-            }
-            while (lastRandomEnemy==randomEnemy){
-                randomEnemy = Math.floor(Math.random() * monsters.length);
-            }
-            console.log("randomEnemy "+randomEnemy);
-
-            enemyS = new Enemy(xDirection[random],0);
-            enemyS.draw();
-
-            lastRandom=random;
-            lastRandomEnemy=randomEnemy;
-            console.log("lastRandomEnemy "+lastRandomEnemy);
-
-            enemiesLeft=enemiesLeft-1;
-            $('#enemyRemainCount').text(enemiesLeft);
-
-        }else if (enemiesLeft==0) {
-            //game over seen
-            console.log("Game Over");
-        }
-    }
-
-    enemyDIV.addEventListener('click', function () {
-        spawnEnemies();
-    },false);
-
-    spawnEnemies();
-</script>
+<script src="../script/lvl01JS.js"></script>
 </body>
 </html>
