--- a/assignments/js/Game/2D Game/src/index.html
+++ b/assignments/js/Game/2D Game/src/index.html
@@ -3,8 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <title>Hunter</title>
-</head>
-<body>
+    <link rel="stylesheet" href="assets/css/indexCSS.css">
+    <link rel="stylesheet" href="assets/css/normalize.css">
+    <link rel="stylesheet" href="assets/css/lvl01_Styles.css">
 
+</head>
+<body class="indexBody">
+<main>
+    <div class="indexBackground"></div>
+    <a href="Levels/level_01.html"><button id="start"></button></a>
+    <div class="cursor"></div>
+</main>
+
+
+<script src="assets/js/jquery-3.6.1.min.js"></script>
+<script src="script/indexJS.js"></script>
+<script src="script/lvl01JS.js"></script>
 </body>
 </html>
