game sounds add

--- a/assignments/js/Game/2D Game/src/Levels/level_01.html
+++ b/assignments/js/Game/2D Game/src/Levels/level_01.html
@@ -5,7 +5,7 @@
     <title>Hunter</title>
     <link rel="stylesheet" href="../assets/css/lvl01_Styles.css">
     <link rel="stylesheet" href="../assets/css/normalize.css">
-
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body class="body">
 <main>
@@ -28,11 +28,12 @@
         </div>
         <div id="enemyRemainCountContainer">
             <h1>Enemies Left : </h1>
-            <h1 id="enemyRemainCount">10</h1>
+            <h1 id="enemyRemainCount">20</h1>
         </div>
     </div>
 </main>
-
+<audio id="lvl01BackgroundAudio" loop src="../assets/sounds/dcpoke__birds-singing-03.mp3"></audio>
+<audio id="sniper" loop src="../assets/sounds/Old Sniper Sound Effect (320 kbps).mp3"></audio>
 <script src="../assets/js/jquery-3.6.1.min.js"></script>
 <script src="../script/lvl01JS.js"></script>
 </body>
