--- a/assignments/js/Game/2D Game/src/index.html
+++ b/assignments/js/Game/2D Game/src/index.html
@@ -3,19 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>Hunter</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="assets/css/indexCSS.css">
     <link rel="stylesheet" href="assets/css/normalize.css">
     <link rel="stylesheet" href="assets/css/lvl01_Styles.css">
-
 </head>
 <body class="indexBody">
 <main>
     <div class="indexBackground"></div>
     <a href="Levels/level_01.html"><button id="start"></button></a>
-    <div class="cursor"></div>
+    <div id="cursor"></div>
 </main>
-
-
+<button id="buttonAudio"></button>
+<audio id="indexBackgroundAudio" src="assets/sounds/Slower-Tempo-2020-03-22_-_A_Bit_Of_Hope_-_David_Fesliyan.mp3"></audio>
 <script src="assets/js/jquery-3.6.1.min.js"></script>
 <script src="script/indexJS.js"></script>
 <script src="script/lvl01JS.js"></script>
