game complete sound effect & and more

--- a/assignments/js/Game/2D Game/src/Levels/level_01.html
+++ b/assignments/js/Game/2D Game/src/Levels/level_01.html
@@ -23,6 +23,7 @@
     <img height="150px" width="75px" id="enemy02" src="../assets/Level 1/SVG/s monster.svg">
     <img height="150px" width="150px" id="enemy03" src="../assets/Level 1/SVG/p monster.svg">
     <img height="200px" width="800x" id="gameOverImg" src="../assets/index/game over.gif">
+    <img height="250px" width="800x" id="gameCompleteImg" src="../assets/index/level complete.gif">
     <div class="score_enemyContainer">
         <div id="scoreBoard">
             <h1>Score : </h1>
@@ -34,6 +35,7 @@
         </div>
     </div>
 </main>
+<audio id="gameCompleteSound" loop src="../assets/sounds/“Level Complete” Sound Effect.mp3"></audio>
 <audio id="gameOverSound" loop src="../assets/sounds/Dead _ Sound Effects.mp3"></audio>
 <audio id="lvl01BackgroundAudio" loop src="../assets/sounds/dcpoke__birds-singing-03.mp3"></audio>
 <audio id="sniper" loop src="../assets/sounds/Old Sniper Sound Effect (320 kbps).mp3"></audio>
