health bar & function added

--- a/assignments/js/Game/2D Game/src/Levels/level_01.html
+++ b/assignments/js/Game/2D Game/src/Levels/level_01.html
@@ -18,12 +18,23 @@
     <div class="bush1"></div>
     <div id="hunter"></div>
     <div id="gameOver"></div>
+    <div id="health">
+        <div>
+            <div id="heart1"></div>
+            <div id="heart2"></div>
+            <div id="heart3"></div>
+        </div>
+    </div>
     <div id="cursor"></div>
     <img height="150px" width="150px" id="enemy01" src="../assets/Level 1/SVG/red monster.svg">
     <img height="150px" width="75px" id="enemy02" src="../assets/Level 1/SVG/s monster.svg">
     <img height="150px" width="150px" id="enemy03" src="../assets/Level 1/SVG/p monster.svg">
     <img height="200px" width="800x" id="gameOverImg" src="../assets/index/game over.gif">
     <img height="250px" width="800x" id="gameCompleteImg" src="../assets/index/level complete.gif">
+    <img id="heartImg1" src="../assets/index/heart x.svg">
+    <img id="heartImg2" src="../assets/index/heart x.svg">
+    <img id="heartImg3" src="../assets/index/heart x.svg">
+
     <div class="score_enemyContainer">
         <div id="scoreBoard">
             <h1>Score : </h1>
