--- a/assignments/js/Game/2D Game/src/Levels/level_02.html
+++ b/assignments/js/Game/2D Game/src/Levels/level_02.html
@@ -30,8 +30,8 @@
     <img height="150px" width="150px" id="lvl02_enemy01" src="../assets/Level 1/SVG/red monster.svg">
     <img height="150px" width="75px" id="lvl02_enemy02" src="../assets/Level 1/SVG/s monster.svg">
     <img height="150px" width="150px" id="lvl02_enemy03" src="../assets/Level 1/SVG/p monster.svg">
-    <img height="200px" width="800x" id="lvl02_gameOverImg" src="../assets/index/game over.gif">
-    <img height="250px" width="800x" id="lvl02_gameCompleteImg" src="../assets/index/level complete.gif">
+    <img height="204px" width="800px" id="lvl02_gameOverImg" src="../assets/Level 2/game over lvl 02.gif">
+    <img height="205px" width="800px" id="lvl02_gameCompleteImg" src="../assets/Level 2/game complete lvl 02.gif">
     <img id="lvl02_heartImg1" src="../assets/index/heart x.svg">
     <img id="lvl02_heartImg2" src="../assets/index/heart x.svg">
     <img id="lvl02_heartImg3" src="../assets/index/heart x.svg">
