--- a/assignments/js/Game/2D Game/src/Levels/level_01.html
+++ b/assignments/js/Game/2D Game/src/Levels/level_01.html
@@ -34,7 +34,9 @@
     <img id="heartImg1" src="../assets/index/heart x.svg">
     <img id="heartImg2" src="../assets/index/heart x.svg">
     <img id="heartImg3" src="../assets/index/heart x.svg">
+    <img height="60px" width="220px" id="LEVEL01Img" src="../assets/Level 1/SVG/LEVEL 01.svg">
 
+    <div id="LEVEL01"></div>
     <div class="score_enemyContainer">
         <div id="scoreBoard">
             <h1>Score : </h1>
