--- a/assignments/js/Game/2D Game/src/Levels/level_02.html
+++ b/assignments/js/Game/2D Game/src/Levels/level_02.html
@@ -35,7 +35,9 @@
     <img id="lvl02_heartImg1" src="../assets/index/heart x.svg">
     <img id="lvl02_heartImg2" src="../assets/index/heart x.svg">
     <img id="lvl02_heartImg3" src="../assets/index/heart x.svg">
+    <img height="60px" width="220px" id="LEVEL02Img" src="../assets/Level 2/LEVEL 02.svg">
 
+    <div id="LEVEL02"></div>
     <div class="lvl02_score_enemyContainer">
         <div id="lvl02_scoreBoard">
             <h1>Score : </h1>
