game added to portfolio

--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
         </div>
         <div>
             <aside>
-                <img alt="Logo" src="assets/portfolio/cal.png">
+                <img alt="Logo" src="assets/portfolio/Hunter.PNG">
             </aside>
             <aside>
-                <h1>Calculator Project</h1>
+                <h1>Hunter (2D Game)</h1>
                 <h5>Details about Project</h5>
                 <br>
                 <br>
@@ -133,6 +133,20 @@
         <section>
             <div id="latest_project">
                 <aside>
+                    <a href="assignments/js/Game/2D Game/src/index.html" target="_blank"><img
+                            alt="Logo" src="assets/portfolio/Hunter.PNG"></a>
+                </aside>
+                <aside>
+                    <h1><a href="assignments/js/Game/2D Game/src/index.html" target="_blank">Hunter <span
+                            style="color: red">(2D Game)</span></a></h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur fuga ipsa iusto nam odio
+                        optio quisquam repellat saepe voluptatem. Dignissimos facilis impedit laboriosam nobis qui quia
+                        repellendus tenetur totam, velit?</p>
+                </aside>
+            </div>
+
+            <div>
+                <aside>
                     <a href="assignments/js/SPA/POS system Using Bootstrap/index.html" target="_blank"><img alt="Logo"
                                                                                                             src="assets/portfolio/POS.jpg"></a>
                 </aside>
@@ -159,19 +173,6 @@
                 </aside>
             </div>
 
-            <div>
-                <aside>
-                    <a href="assignments/css/Animation/Case 04/case_04.html" target="_blank"><img
-                            alt="Logo" src="assets/portfolio/Car Animation Project.gif"></a>
-                </aside>
-                <aside>
-                    <h1><a href="assignments/css/Animation/Case 04/case_04.html" target="_blank">Car <span
-                            style="color: red">Animation</span></a></h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur fuga ipsa iusto nam odio
-                        optio quisquam repellat saepe voluptatem. Dignissimos facilis impedit laboriosam nobis qui quia
-                        repellendus tenetur totam, velit?</p>
-                </aside>
-            </div>
         </section>
         <section>
             <button onclick="document.location='project.html'">Check Out More Projects</button>
