--- a/project.html
+++ b/project.html
@@ -43,6 +43,18 @@
 <!--        </div>-->
         <div>
             <aside>
+                <a href="assignments/js/Game/2D Game/src/index.html" target="_blank"><img alt="Logo" src="assets/portfolio/Hunter.PNG"></a>
+            </aside>
+            <aside>
+                <h1><a href="assignments/js/Game/2D Game/src/index.html" target="_blank">Hunter <span style="color: red">(2D Game)</span></a></h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur fuga ipsa iusto nam odio
+                    optio quisquam repellat saepe voluptatem. Dignissimos facilis impedit laboriosam nobis qui quia
+                    repellendus tenetur totam, velit?</p>
+            </aside>
+        </div>
+
+        <div>
+            <aside>
                 <a href="assignments/js/SPA/POS system Using Bootstrap/index.html" target="_blank"><img alt="Logo" src="assets/portfolio/POS.jpg"></a>
             </aside>
             <aside>
